changing repo file structure.

--- a/Example Configuration/dmtalemux.ini
+++ b/Example Configuration/dmtalemux.ini
@@ -1,7 +1,7 @@
 [Common]
 minimize = True
 logging = True
-location = 86,140
+location = 7,25
 
 [Radio]
 baud = 19200
@@ -15,8 +15,8 @@ port = COM17
 
 [Macro]
 show = True
-m1 = STOP,white,red,hex,somehexvalue
+m1 = STOP,white,red,hex,fefe76e01c0000fd
 m2 = Away,white,green,builtin,away
-m3 = Data,white,orange,hex,somevalue2
+m3 = Data,white,orange,hex,fefe76e01a040101fd
 m4 = Audio,white,orange,hex,somevalue3
 
